--- a/index.html
+++ b/index.html
@@ -245,32 +245,33 @@
             </div>
           </div>
 
-<!-- In the PERFORMANCE section, update the Product Costs Analysis card -->
-<div class="card">
-  <div class="h">💰 Lifetime Product Costs Analysis</div>
-  <div class="row wrap">
-    <select id="pcaProduct" class="input">
-      <option value="all">All products</option>
-    </select>
-    <select id="pcaRange" class="input date-range-select">
-      <option value="8days">Last 8 days</option>
-      <option value="15days">Last 15 days</option>
-      <option value="1month">Last 1 month</option>
-      <option value="2months">Last 2 months</option>
-      <option value="6months">Last 6 months</option>
-      <option value="1year">Last 1 year</option>
-      <option value="2years">Last 2 years</option>
-      <option value="lifetime">Lifetime</option>
-      <option value="custom">Custom range</option>
-    </select>
-    <div class="custom-range" style="display: none;">
-      <input type="date" class="input custom-start"/>
-      <input type="date" class="input custom-end"/>
-    </div>
-    <button id="pcaRun" class="btn">📊 Generate Analysis</button>
-  </div>
-  <div id="pcaResults"></div>
-</div>
+          <!-- Product Costs Analysis -->
+          <div class="card">
+            <div class="h">💰 Lifetime Product Costs Analysis</div>
+            <div class="row wrap">
+              <select id="pcaProduct" class="input">
+                <option value="all">All products</option>
+              </select>
+              <select id="pcaRange" class="input date-range-select">
+                <option value="8days">Last 8 days</option>
+                <option value="15days">Last 15 days</option>
+                <option value="1month">Last 1 month</option>
+                <option value="2months">Last 2 months</option>
+                <option value="6months">Last 6 months</option>
+                <option value="1year">Last 1 year</option>
+                <option value="2years">Last 2 years</option>
+                <option value="lifetime">Lifetime</option>
+                <option value="custom">Custom range</option>
+              </select>
+              <div class="custom-range" style="display: none;">
+                <input type="date" class="input custom-start"/>
+                <input type="date" class="input custom-end"/>
+              </div>
+              <button id="pcaRun" class="btn">📊 Generate Analysis</button>
+            </div>
+            <div id="pcaResults"></div>
+          </div>
+
           <!-- Remittance Analytics -->
           <div class="card">
             <div class="h">📈 Remittance Analytics (🏆 Filtered By Top Delivered)</div>
@@ -300,47 +301,48 @@
             </div>
             <div class="table-scroll">
               <table class="table">
-<thead>
-  <tr>
-    <th>Product Name</th>
-    <th>Country</th>
-    <th>Orders</th>
-    <th>Delivered Orders</th>
-    <th>Delivered Pieces</th>
-    <th>Revenue</th>
-    <th>Advertising Spend</th>
-    <th>Boxleo Fees</th>
-    <th>Product Cost China</th>
-    <th>Total Shipping Cost</th>
-    <th>Delivery Rate</th>
-    <th>Boxleo/Order</th>
-    <th>Boxleo/Piece</th>
-    <th>Ad Cost/Order</th>
-    <th>Ad Cost/Piece</th>
-    <th>Avg Order Value</th>
-    <th>Profit</th>
-  </tr>
-</thead>
-<tfoot>
-  <tr class="totals">
-    <th colspan="2">Totals</th>
-    <th id="remAnalyticsOrdersT">0</th>
-    <th id="remAnalyticsDeliveredOrdersT">0</th>
-    <th id="remAnalyticsDeliveredPiecesT">0</th>
-    <th id="remAnalyticsRevenueT">0</th>
-    <th id="remAnalyticsAdSpendT">0</th>
-    <th id="remAnalyticsBoxleoT">0</th>
-    <th id="remAnalyticsProductCostT">0</th>
-    <th id="remAnalyticsShippingCostT">0</th>
-    <th id="remAnalyticsDeliveryRateT">0%</th>
-    <th id="remAnalyticsBoxleoOrderT">$0</th>
-    <th id="remAnalyticsBoxleoPieceT">$0</th>
-    <th id="remAnalyticsAdOrderT">$0</th>
-    <th id="remAnalyticsAdPieceT">$0</th>
-    <th id="remAnalyticsAOVT">$0</th>
-    <th id="remAnalyticsProfitT">0</th>
-  </tr>
-</tfoot>
+                <thead>
+                  <tr>
+                    <th>Product Name</th>
+                    <th>Country</th>
+                    <th>Orders</th>
+                    <th>Delivered Orders</th>
+                    <th>Delivered Pieces</th>
+                    <th>Revenue</th>
+                    <th>Advertising Spend</th>
+                    <th>Boxleo Fees</th>
+                    <th>Product Cost China</th>
+                    <th>Total Shipping Cost</th>
+                    <th>Delivery Rate</th>
+                    <th>Boxleo/Order</th>
+                    <th>Boxleo/Piece</th>
+                    <th>Ad Cost/Order</th>
+                    <th>Ad Cost/Piece</th>
+                    <th>Avg Order Value</th>
+                    <th>Profit</th>
+                  </tr>
+                </thead>
+                <tbody id="remAnalyticsBody"></tbody>
+                <tfoot>
+                  <tr class="totals">
+                    <th colspan="2">Totals</th>
+                    <th id="remAnalyticsOrdersT">0</th>
+                    <th id="remAnalyticsDeliveredOrdersT">0</th>
+                    <th id="remAnalyticsDeliveredPiecesT">0</th>
+                    <th id="remAnalyticsRevenueT">0</th>
+                    <th id="remAnalyticsAdSpendT">0</th>
+                    <th id="remAnalyticsBoxleoT">0</th>
+                    <th id="remAnalyticsProductCostT">0</th>
+                    <th id="remAnalyticsShippingCostT">0</th>
+                    <th id="remAnalyticsDeliveryRateT">0%</th>
+                    <th id="remAnalyticsBoxleoOrderT">$0</th>
+                    <th id="remAnalyticsBoxleoPieceT">$0</th>
+                    <th id="remAnalyticsAdOrderT">$0</th>
+                    <th id="remAnalyticsAdPieceT">$0</th>
+                    <th id="remAnalyticsAOVT">$0</th>
+                    <th id="remAnalyticsProfitT">0</th>
+                  </tr>
+                </tfoot>
               </table>
             </div>
           </div>
@@ -369,46 +371,47 @@
             </div>
             <div class="table-scroll">
               <table class="table">
-<thead>
-  <tr>
-    <th>Country</th>
-    <th>Orders</th>
-    <th>Delivered Orders</th>
-    <th>Delivered Pieces</th>
-    <th>Revenue</th>
-    <th>Total Advertising Spend</th>
-    <th>Product Cost China</th>
-    <th>Total Shipping Cost</th>
-    <th>Total Boxleo Fees</th>
-    <th>Delivery Rate</th>
-    <th>Boxleo/Order</th>
-    <th>Boxleo/Piece</th>
-    <th>Ad Cost/Order</th>
-    <th>Ad Cost/Piece</th>
-    <th>Avg Order Value</th>
-    <th>Profit</th>
-  </tr>
-</thead>
-<tfoot>
-  <tr class="totals">
-    <th>Totals</th>
-    <th id="pcOrdersT">0</th>
-    <th id="pcDeliveredOrdersT">0</th>
-    <th id="pcDeliveredPiecesT">0</th>
-    <th id="pcRevT">0</th>
-    <th id="pcAdT">0</th>
-    <th id="pcProductCostT">0</th>
-    <th id="pcShippingCostT">0</th>
-    <th id="pcBoxleoT">0</th>
-    <th id="pcDeliveryRateT">0%</th>
-    <th id="pcBoxleoOrderT">$0</th>
-    <th id="pcBoxleoPieceT">$0</th>
-    <th id="pcAdOrderT">$0</th>
-    <th id="pcAdPieceT">$0</th>
-    <th id="pcAOVT">$0</th>
-    <th id="pcProfitT">0</th>
-  </tr>
-</tfoot>
+                <thead>
+                  <tr>
+                    <th>Country</th>
+                    <th>Orders</th>
+                    <th>Delivered Orders</th>
+                    <th>Delivered Pieces</th>
+                    <th>Revenue</th>
+                    <th>Total Advertising Spend</th>
+                    <th>Product Cost China</th>
+                    <th>Total Shipping Cost</th>
+                    <th>Total Boxleo Fees</th>
+                    <th>Delivery Rate</th>
+                    <th>Boxleo/Order</th>
+                    <th>Boxleo/Piece</th>
+                    <th>Ad Cost/Order</th>
+                    <th>Ad Cost/Piece</th>
+                    <th>Avg Order Value</th>
+                    <th>Profit</th>
+                  </tr>
+                </thead>
+                <tbody id="profitCountryBody"></tbody>
+                <tfoot>
+                  <tr class="totals">
+                    <th>Totals</th>
+                    <th id="pcOrdersT">0</th>
+                    <th id="pcDeliveredOrdersT">0</th>
+                    <th id="pcDeliveredPiecesT">0</th>
+                    <th id="pcRevT">0</th>
+                    <th id="pcAdT">0</th>
+                    <th id="pcProductCostT">0</th>
+                    <th id="pcShippingCostT">0</th>
+                    <th id="pcBoxleoT">0</th>
+                    <th id="pcDeliveryRateT">0%</th>
+                    <th id="pcBoxleoOrderT">$0</th>
+                    <th id="pcBoxleoPieceT">$0</th>
+                    <th id="pcAdOrderT">$0</th>
+                    <th id="pcAdPieceT">$0</th>
+                    <th id="pcAOVT">$0</th>
+                    <th id="pcProfitT">0</th>
+                  </tr>
+                </tfoot>
               </table>
             </div>
           </div>
