--- a/product.html
+++ b/product.html
@@ -221,6 +221,53 @@
       </div>
     </div>
 
+    <!-- Store Orders Section -->
+    <div class="section">
+      <h3>📦 Store Orders for This Product</h3>
+      <div class="card">
+        <div class="h">Store Orders Tracking</div>
+        <div class="table-scroll">
+          <table class="table">
+            <thead>
+              <tr>
+                <th>Period</th>
+                <th>Country</th>
+                <th>Orders</th>
+                <th>Actions</th>
+              </tr>
+            </thead>
+            <tbody id="pdStoreOrdersBody"></tbody>
+          </table>
+        </div>
+        <!-- Pagination -->
+        <div class="pagination" id="pdStoreOrdersPagination" style="margin-top: 15px;"></div>
+      </div>
+    </div>
+
+    <!-- Remittances -->
+    <div class="section">
+      <h3>Remittances for This Product</h3>
+      <div class="table-scroll">
+        <table class="table">
+          <thead>
+            <tr>
+              <th>Period</th>
+              <th>Country</th>
+              <th>Orders</th>
+              <th>Pieces</th>
+              <th>Revenue</th>
+              <th>Ad Spend</th>
+              <th>Boxleo Fees</th>
+              <th>Actions</th>
+            </tr>
+          </thead>
+          <tbody id="pdRemittancesBody"></tbody>
+        </table>
+      </div>
+      <!-- Pagination -->
+      <div class="pagination" id="pdRemittancesPagination" style="margin-top: 15px;"></div>
+    </div>
+
     <!-- Influencer Spend -->
     <div class="section">
       <h3>Influencer Spend</h3>
@@ -281,28 +328,6 @@
             <tbody id="pdInfBody"></tbody>
           </table>
         </div>
-      </div>
-    </div>
-
-    <!-- Remittances -->
-    <div class="section">
-      <h3>Remittances for This Product</h3>
-      <div class="table-scroll">
-        <table class="table">
-          <thead>
-            <tr>
-              <th>Period</th>
-              <th>Country</th>
-              <th>Orders</th>
-              <th>Pieces</th>
-              <th>Revenue</th>
-              <th>Ad Spend</th>
-              <th>Boxleo Fees</th>
-              <th>Actions</th>
-            </tr>
-          </thead>
-          <tbody id="pdRemittancesBody"></tbody>
-        </table>
       </div>
     </div>
   </div>
