--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div id="main" style="display:none">
       <nav class="nav">
         <a data-view="home" class="active">📊 Dashboard</a>
-        <a data-view="products">📦 Products</a>
+        <a data-view="products">📦 Prodducts</a>
         <a data-view="performance">📈 Performance</a>
         <a data-view="stockMovement">🚚 Stock Movement</a>
         <a data-view="finance">💰 Finance</a>
