--- a/product.html
+++ b/product.html
@@ -103,12 +103,12 @@
               <th>ID</th>
               <th>Route</th>
               <th>Qty</th>
-              <th>Est. Cost</th>
-              <th>Final Cost</th>
+              <th>Est. Ship Cost</th>
+              <th>Final Ship Cost</th>
               <th>China Cost</th>
               <th>Departed</th>
               <th>Arrived</th>
-              <th>Status</th>
+              <th>Payment Status</th>
               <th>Actions</th>
             </tr>
           </thead>
@@ -126,11 +126,11 @@
               <th>ID</th>
               <th>Route</th>
               <th>Qty</th>
-              <th>Est. Cost</th>
-              <th>Final Cost</th>
+              <th>Est. Ship Cost</th>
+              <th>Final Ship Cost</th>
               <th>Departed</th>
               <th>Arrived</th>
-              <th>Status</th>
+              <th>Payment Status</th>
               <th>Actions</th>
             </tr>
           </thead>
@@ -149,11 +149,13 @@
               <th>ID</th>
               <th>Route</th>
               <th>Qty</th>
-              <th>Ship Cost</th>
+              <th>Est. Ship Cost</th>
+              <th>Final Ship Cost</th>
               <th>China Cost</th>
               <th>Departed</th>
               <th>Arrived</th>
               <th>Days</th>
+              <th>Payment Status</th>
               <th>Note</th>
               <th>Actions</th>
             </tr>
@@ -191,7 +193,7 @@
               <tr>
                 <th>Country</th>
                 <th>Revenue</th>
-                <th>Refunds</th>
+                <th>Refunded Amount</th>
                 <th>Ad Spend</th>
                 <th>Influencer Spend</th>
                 <th>Boxleo Fees</th>
@@ -200,6 +202,7 @@
                 <th>Total Cost</th>
                 <th>Orders</th>
                 <th>Delivered Orders</th>
+                <th>Refunded Orders</th>
                 <th>Delivered Pieces</th>
                 <th>Delivery Rate</th>
                 <th>Profit</th>
@@ -210,7 +213,7 @@
               <tr class="totals">
                 <th>Totals</th>
                 <th id="pdLPRevT">0</th>
-                <th id="pdLPRefundsT">0</th>
+                <th id="pdLPRefundedT">0</th>
                 <th id="pdLPAdT">0</th>
                 <th id="pdLPInfluencerT">0</th>
                 <th id="pdLPBoxleoT">0</th>
@@ -219,6 +222,7 @@
                 <th id="pdLPTotalCostT">0</th>
                 <th id="pdLPOrdersT">0</th>
                 <th id="pdLPDeliveredOrdersT">0</th>
+                <th id="pdLPRefundedOrdersT">0</th>
                 <th id="pdLPDeliveredPiecesT">0</th>
                 <th id="pdLPDeliveryRateT">0%</th>
                 <th id="pdLPProfitT">0</th>
@@ -280,8 +284,19 @@
     <div class="section">
       <h3>💸 Refunds for This Product</h3>
       <div class="card">
-        <div class="h">Refunds Tracking</div>
-        <div class="table-scroll">
+        <div class="h">Refund Management</div>
+        <div class="row wrap">
+          <input id="pdRefundDate" type="date" class="input" placeholder="Date"/>
+          <select id="pdRefundCountry" class="input">
+            <option value="">Select country...</option>
+          </select>
+          <input id="pdRefundOrders" type="number" class="input" placeholder="Orders Refunded" min="0"/>
+          <input id="pdRefundPieces" type="number" class="input" placeholder="Pieces Refunded" min="0"/>
+          <input id="pdRefundAmount" type="number" class="input" placeholder="Amount Refunded (USD)" step="0.01"/>
+          <input id="pdRefundReason" class="input" placeholder="Reason (optional)"/>
+          <button id="pdRefundSave" class="btn">💾 Save Refund</button>
+        </div>
+        <div class="table-scroll" style="margin-top: 15px;">
           <table class="table">
             <thead>
               <tr>
