--- a/product.html
+++ b/product.html
@@ -85,6 +85,7 @@
                 <th>Max CPL</th>
                 <th>Delivery Rate</th>
                 <th>Profit + Ad Budget</th>
+                <th>Boxleo/Order</th>
               </tr>
             </thead>
             <tbody id="pdPBBBody"></tbody>
