--- a/index.html
+++ b/index.html
@@ -215,6 +215,16 @@
                     <th>Total Stock</th>
                     <th>Total Transit</th>
                     <th>Total Pieces</th>
+                    <th>Kenya Stock</th>
+                    <th>Kenya Ad Spend</th>
+                    <th>Tanzania Stock</th>
+                    <th>Tanzania Ad Spend</th>
+                    <th>Uganda Stock</th>
+                    <th>Uganda Ad Spend</th>
+                    <th>Zambia Stock</th>
+                    <th>Zambia Ad Spend</th>
+                    <th>Zimbabwe Stock</th>
+                    <th>Zimbabwe Ad Spend</th>
                     <th>Actions</th>
                   </tr>
                 </thead>
