--- a/index.html
+++ b/index.html
@@ -202,37 +202,22 @@
             </div>
           </div>
 
-          <!-- Products Table -->
-          <div class="section">
-            <h2>📦 All Products</h2>
-            <div class="table-scroll">
-              <table id="productsTable" class="table">
-                <thead>
-                  <tr>
-                    <th>Name</th>
-                    <th>SKU</th>
-                    <th>Status</th>
-                    <th>Total Stock</th>
-                    <th>Total Transit</th>
-                    <th>Total Pieces</th>
-                    <th>Kenya Stock</th>
-                    <th>Kenya Ad Spend</th>
-                    <th>Tanzania Stock</th>
-                    <th>Tanzania Ad Spend</th>
-                    <th>Uganda Stock</th>
-                    <th>Uganda Ad Spend</th>
-                    <th>Zambia Stock</th>
-                    <th>Zambia Ad Spend</th>
-                    <th>Zimbabwe Stock</th>
-                    <th>Zimbabwe Ad Spend</th>
-                    <th>Actions</th>
-                  </tr>
-                </thead>
-                <tbody></tbody>
-              </table>
-            </div>
-          </div>
-
+   <!-- Products Table -->
+<div class="section">
+  <h2>📦 All Products</h2>
+  <div class="table-scroll">
+    <table id="productsTable" class="table">
+      <thead>
+        <tr>
+          <!-- JavaScript will populate this -->
+        </tr>
+      </thead>
+      <tbody>
+        <!-- JavaScript will populate this -->
+      </tbody>
+    </table>
+  </div>
+</div>
           <!-- Country Product Stats -->
           <div class="section">
             <h2>📊 Products by Country</h2>
