--- a/product.html
+++ b/product.html
@@ -75,19 +75,19 @@
         <div class="h">💰 Automated Budget Calculation by Country</div>
         <div class="table-scroll">
           <table class="table">
-            <thead>
-              <tr>
-                <th>Country</th>
-                <th>Selling Price</th>
-                <th>Product Cost China</th>
-                <th>Shipping Cost</th>
-                <th>Total Product Cost</th>
-                <th>Max CPL</th>
-                <th>Delivery Rate</th>
-                <th>Profit + Ad Budget</th>
-                <th>Boxleo/Order</th>
-              </tr>
-            </thead>
+<thead>
+  <tr>
+    <th>Country</th>
+    <th>Max CPL</th>
+    <th>Available for Profit & Ads</th>
+    <th>Delivery Rate</th>
+    <th>Selling Price</th>
+    <th>Product Cost China</th>
+    <th>Shipping Cost</th>
+    <th>Boxleo/Order</th>
+    <th>Total Cost</th>
+  </tr>
+</thead>
             <tbody id="pdPBBBody"></tbody>
           </table>
         </div>
