--- a/product.html
+++ b/product.html
@@ -205,6 +205,8 @@
                 <th>Delivered Orders</th>
                 <th>Refunded Orders</th>
                 <th>Delivered Pieces</th>
+                <th>Profit/Order</th>
+                <th>Profit/Piece</th>
                 <th>Delivery Rate</th>
                 <th>Profit</th>
               </tr>
@@ -225,6 +227,8 @@
                 <th id="pdLPDeliveredOrdersT">0</th>
                 <th id="pdLPRefundedOrdersT">0</th>
                 <th id="pdLPDeliveredPiecesT">0</th>
+                <th id="pdLPProfitOrderT">$0</th>
+                <th id="pdLPProfitPieceT">$0</th>
                 <th id="pdLPDeliveryRateT">0%</th>
                 <th id="pdLPProfitT">0</th>
               </tr>
